add edit page for self defined method calculating vthresh

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -192,7 +192,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  border-radius: 20px;">3</div>参数调优</div>
+  border-radius: 20px;">3</div>参数调优<span id="self_def_opt_alg" style="text-decoration: underline;color: #77A4FF;cursor: pointer;">(自定义实现)</span></div>
                     <div class="progress" style="background: #E6E6E6;
                     border-radius: 30px;height: 40px;margin-top: 10px;">
                         <div id="search_progress_div" class="progress-bar progress-bar-info" role="progressbar"
@@ -411,8 +411,13 @@
                 </h4>
             </div>
             <div class="modal-body">
-        <div style="margin-top: 50px;">
-            <div class="radio">
+        <div style="margin-top: 30px;display: inline-block; width: 50%;">
+            <div style="font-family: SourceHanSansCN-Normal;
+            font-size: 16px;
+            font-weight: bold;
+            color: #333;
+            letter-spacing: 1.07px;">预处理步骤：</div>
+            <div class="radio" style="margin-top: 30px;">
                 <label>
                     <input type="radio" name="alg_call_radios" id="default_alg" value="default_alg" checked> <span style="font-family: SourceHanSansCN-Normal;
                     font-size: 16px;
@@ -424,6 +429,31 @@
             <div class="radio" style="margin-top: 30px;">
                 <label>
                     <input type="radio" name="alg_call_radios" id="self_alg" value="self_alg"> <span style="font-family: SourceHanSansCN-Normal;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #333;
+                    letter-spacing: 1.07px;margin-left: 20px;">自定义算法</span>
+                </label>
+            </div>
+        </div>
+        <div style="margin-top: 30px;display: inline-block;width: 50%;">
+            <div style="font-family: SourceHanSansCN-Normal;
+            font-size: 16px;
+            font-weight: bold;
+            color: #333;
+            letter-spacing: 1.07px;">参数调优步骤：</div>
+            <div class="radio" style="margin-top: 30px;">
+                <label>
+                    <input type="radio" name="opt_alg_call_radios" id="default_opt_alg" value="default_opt_alg" checked> <span style="font-family: SourceHanSansCN-Normal;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #333;
+                    letter-spacing: 1.07px;margin-left: 20px;">默认算法</span>
+                </label>
+            </div>
+            <div class="radio" style="margin-top: 30px;">
+                <label>
+                    <input type="radio" name="opt_alg_call_radios" id="self_opt_alg" value="self_opt_alg"> <span style="font-family: SourceHanSansCN-Normal;
                     font-size: 16px;
                     font-weight: bold;
                     color: #333;
@@ -541,14 +571,24 @@ let log_output_lists = new Array();
           $("#self_def_preprocess_alg").on("click", function(){
               vscode.postMessage(JSON.stringify({"convert_self_def": "preprocess"}));
           });
+          $("#self_def_opt_alg").on("click", function(){
+              vscode.postMessage(JSON.stringify({"convert_self_def": "opt"}));
+          });
           $("#check_alg_select_btn").on("click", ()=>{
-                if (document.getElementById("default_alg").checked) {
-                    console.log("选择使用默认算法....");
-                    vscode.postMessage(JSON.stringify({"select_alg_res": "default"}));
-                } else {
-                    console.log("选择使用自定义算法...");
-                    vscode.postMessage(JSON.stringify({"select_alg_res":"self"}));
-                }
+              msg = {}
+              if (document.getElementById("default_alg").checked) {
+                  msg["select_alg_res"] = "default";
+              } else {
+                  msg["select_alg_res"] = "self";
+              }
+
+              if (document.getElementById("default_opt_alg").checked) {
+                  msg["select_alg_res_opt"] = "default";
+              } else {
+                  msg["select_alg_res_opt"] = "self";
+              }
+              console.log("向 extension 发送选择调用的算法 ： " + JSON.stringify(msg));
+              vscode.postMessage(JSON.stringify(msg));
             });
           window.addEventListener("message", function(evt){
               console.log("ANN 转SNN 模型接收到extension 消息："+evt.data);
