--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -9,7 +9,19 @@
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
   <div class="loading-div">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i>
+    <div class="container"  style="padding-left: 40vw;">
+      <div class="ispinner ispinner-large">
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+      </div>
+    </div>
+    <!-- <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i> -->
     <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
   </div>
 
@@ -163,10 +175,35 @@ body {
       display: inline-block;
       vertical-align: middle;
   } 
+
+.container {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+  box-sizing: border-box;
+}
+.container:last-child {
+  padding: 31.5px;
+}
+.container::after {
+  position: absolute;
+  width: 100px;
+  height: 60px;
+  left: 0;
+  bottom: -30px;
+  line-height: 30px;
+  text-align: center;
+}
+.container:last-child::after {
+  content: 'large';
+}
 </style>
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="http://localhost:6003/css/font-awesome.min.css">
+<link rel="stylesheet" media="all" href="http://localhost:6003/css/ispinner.prefixed.css" />
 
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
